--- a/Lesson 9/pages/index.html
+++ b/Lesson 9/pages/index.html
@@ -116,29 +116,36 @@
         </div>
         <div class="footer">
             <div class="footer_box">
+                <div class="footer_logo">
+                    <i class="fas fa-comments fa-5x" style="color:white;"></i>
+                </div>
                 <p class="footer_text_one">Get Consultation</p>
                 <p class="footer_text_two">Porttitor tristique eget eu nisi. Donec iaculis velit eu tortor sagittis interdum. Suspendisse auctor volutpat turpis!</p>
-                <a class="container_text_two button_text footer_button" href="#">
+                <a class="button_text footer_button" href="#">
                     <p class="footer_text_one">
                         Contact us
                     </p>
                 </a>
             </div>
-            <div class="footer_box">
-                <img>
+            <div class="footer_box box_center">
+                <div class="footer_logo">
+                    <i class="fas fa-shopping-cart fa-5x" style="color:white;"></i>
+                </div>
                 <p class="footer_text_one">Order Online</p>
                 <p class="footer_text_two">Donec at orci non urna porttitor tristique eget eu nisi. Donec iaculis velit eu tortor sagittis interdum. Suspendisse auctor volutpat turpis!</p>
-                <a class="container_text_two button_text footer_button" href="#">
+                <a class="button_text footer_button" href="#">
                     <p class="footer_text_one">
                         View menu
                     </p>
                 </a>
             </div>
             <div class="footer_box">
-                <img>
+                <div class="footer_logo">
+                    <i class="fas fa-map-marker-alt fa-5x" style="color:white;"></i>
+                </div>
                 <p class="footer_text_one">Visit Seven Weed</p>
                 <p class="footer_text_two">Aliquam quis justo vel ante venenatis consequat sed sit amet nisl. Aenean gravida dictum orci, id auctor ipsum tempus vel.</p>
-                <a class="container_text_two button_text footer_button" href="#">
+                <a class="button_text footer_button" href="#">
                     <p class="footer_text_one">
                         Get directions
                     </p>
